[project]
name = "automatic-uv-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyscreeze>=1.0.1",
    "pywinctl>=0.4.1",
    "amqtt>=0.11.3",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
]
